Add Makefile for web output.

--- a/.gitignore
+++ b/.gitignore
@@ -11,5 +11,9 @@
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
+# Makefile directories
+build/
+html/*.wasm
+html/*.js
 # Dependency directories (remove the comment below to include it)
 # vendor/
